--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ defusedxml==0.6.0
 docopt==0.6.2
 dominate==2.3.5
 entrypoints==0.3
-Flask==1.0.3
+Flask==1.1.1
 Flask-Bcrypt==0.7.1
 flask-blueprint==1.2.9
 Flask-Bootstrap==3.3.7.1
@@ -25,8 +25,8 @@ Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Moment==0.7.0
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.0
-flask-whooshalchemy3==0.1.2
+Flask-SQLAlchemy==2.4.1
+Flask-WhooshAlchemyPlus==0.7.5
 Flask-WTF==0.14.2
 httpserver==1.1.0
 idna==2.8
@@ -74,7 +74,7 @@ qtconsole==4.5.2
 requests==2.22.0
 Send2Trash==1.5.0
 six==1.12.0
-SQLAlchemy==1.1.13
+SQLAlchemy==1.3.8
 SQLAlchemy-Utils==0.34.0
 terminado==0.8.2
 testpath==0.4.2
@@ -85,7 +85,7 @@ urllib3==1.25.3
 visitor==0.1.3
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.15.4
+Werkzeug==0.16.0
 Whoosh==2.7.4
 widgetsnbextension==3.5.1
 wrapt==1.11.1
