--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,28 @@
-alembic==1.0.10
-astroid==2.2.5
-attrs==19.1.0
-backcall==0.1.0
+alembic==1.2.1
 bcrypt==3.1.7
-bleach==3.1.0
 blinker==1.4
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
+cffi==1.13.1
 Click==7.0
-decorator==4.4.0
-defusedxml==0.6.0
-docopt==0.6.2
-dominate==2.3.5
-entrypoints==0.3
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
-flask-blueprint==1.2.9
-Flask-Bootstrap==3.3.7.1
-Flask-DebugTool==0.1.8
-Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
-Flask-Moment==0.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
-Flask-WhooshAlchemyPlus==0.7.5
+flask-whooshalchemy3==0.1.2
 Flask-WTF==0.14.2
-httpserver==1.1.0
-idna==2.8
-ipykernel==5.1.1
-ipython==7.7.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.20
 itsdangerous==1.1.0
-jedi==0.14.1
-Jinja2==2.10.1
-jsonschema==3.0.2
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-lazy-object-proxy==1.4.1
-Mako==1.0.12
+Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-nbconvert==5.5.0
-nbformat==4.4.0
-notebook==6.0.0
-pandocfilters==1.4.2
-parso==0.5.1
 pbr==3.1.1
-pexpect==4.7.0
-pickleshare==0.7.5
-Pillow==6.1.0
-pkg-resources==0.0.0
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
+Pillow==2.2.2
 pycparser==2.19
-Pygments==2.4.2
-pylint==2.3.1
-pylint-flask==0.6
-pylint-plugin-utils==0.5
-PyPDF2==1.26.0
-pyrsistent==0.15.4
 python-dateutil==2.8.0
 python-editor==1.0.4
-pyzmq==18.0.2
-qtconsole==4.5.2
-requests==2.22.0
-Send2Trash==1.5.0
 six==1.12.0
-SQLAlchemy==1.3.8
-SQLAlchemy-Utils==0.34.0
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.3
-traitlets==4.3.2
-typed-ast==1.4.0
-urllib3==1.25.3
-visitor==0.1.3
-wcwidth==0.1.7
-webencodings==0.5.1
+SQLAlchemy==1.3.10
 Werkzeug==0.16.0
 Whoosh==2.7.4
-widgetsnbextension==3.5.1
-wrapt==1.11.1
 WTForms==2.2.1
