--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
 alembic==1.2.1
+astroid==2.4.0
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.13.1
 Click==7.0
+colorama==0.4.3
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
+Flask-Lint==0.1.dev20171129
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
-flask-whooshalchemy3==0.1.2
+flask-whooshalchemy3==0.2.0
 Flask-WTF==0.14.2
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jsonlint==0.1
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 pbr==3.1.1
-Pillow==2.2.2
+Pillow==7.1.2
 pycparser==2.19
+pylint==2.5.0
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
-SQLAlchemy==1.3.10
+SQLAlchemy==1.3.16
+toml==0.10.0
 Werkzeug==0.16.0
 Whoosh==2.7.4
+wrapt==1.12.1
 WTForms==2.2.1
